# aws-movies

./: .gitignore  Makefile
backend/: Makefile
backend/docs/: README.md
backend/functions/movies-handler-graphql/: Cargo.toml
backend/functions/movies-handler-graphql/src/: data.rs  dynamo.rs  main.rs  option.rs  storage.rs
backend/scripts/: test.py
backend/terraform/aws/: env_vars_sample.sh  main.tf  terragrunt.hcl
docs/: README.md
functions/movies-handler-graphql/: Cargo.toml  Makefile
functions/movies-handler-graphql/src/: data.rs  main.rs  schema.rs
scripts/: test.py
terraform/: .gitignore
terraform/aws/: env_vars_sample.sh  main.tf  terragrunt.hcl
